sql/rpl_parallel.cc
@@ -789,9 +789,10 @@ rpl_parallel_thread::get_rgi(Relay_log_info *rli, Gtid_log_event *gtid_ev,
       return NULL;
     }
     rgi->is_parallel_exec = true;
-    if ((rgi->deferred_events_collecting= rli->mi->rpl_filter->is_on()))
-      rgi->deferred_events= new Deferred_log_events(rli);
   }
+  if ((rgi->deferred_events_collecting= rli->mi->rpl_filter->is_on()) &&
+      !rgi->deferred_events)
+    rgi->deferred_events= new Deferred_log_events(rli);
   if (event_group_new_gtid(rgi, gtid_ev))
   {
     free_rgi(rgi);
@@ -810,11 +811,6 @@ rpl_parallel_thread::free_rgi(rpl_group_info *rgi)
   mysql_mutex_assert_owner(&LOCK_rpl_thread);
   DBUG_ASSERT(rgi->commit_orderer.waitee == NULL);
   rgi->free_annotate_event();
-  if (rgi->deferred_events)
-  {
-    delete rgi->deferred_events;
-    rgi->deferred_events= NULL;
-  }
   rgi->next= rgi_free_list;
   rgi_free_list= rgi;
 }
